[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.17.2"
celery = {extras = ["rabbitmq"], version = "^5.3.6"}
pydantic = "^2.5.2"
SQLAlchemy = "^2.0.23"
alembic = "^1.12.1"
fastapi = "^0.104.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
